--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </tr>
     </table>
     <hr>
-    <a href="Food.html">Food</a>
+    <a href="food.html">Food</a>
     <br>
-    <a href="Contact me.html">Contact details</a>
+    <a href="contact me.html">Contact details</a>
     <br>
     <hr>
     <table cellspacing="10">
